==> Blinest/ControlSystem_STM32H7/BSP/Camera/lcd_spi_154.c <==
#include "lcd_spi_154.h"

void  LCD_WriteBuff(uint16_t *DataBuff, uint16_t DataSize)
{
	LCD_DC_Data;     // 拉高指令选择 引脚（推挽输出高电平），代表接下来发送 数据

	// 修改为16位数据宽度，写入数据更高效，减少传输次数
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);		
	
	LCD_SPI_TransmitBuffer(&LCD_SPI, DataBuff, DataSize) ; // 使用自定义传输
	
	// 改回8位数据宽度，因为指令和参数数据都是按8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);	
}

void SPI_LCD_Init(void)
{
   LCD_MX_SPI6_Init();

   // Init backlight (PG12) and DC (PG15)
   {
       GPIO_InitTypeDef g = {0};
       __HAL_RCC_GPIOG_CLK_ENABLE();
       g.Mode  = GPIO_MODE_OUTPUT_PP;
       g.Pull  = GPIO_NOPULL;
       g.Speed = GPIO_SPEED_FREQ_LOW;
       g.Pin   = LCD_Backlight_PIN;
       HAL_GPIO_Init(LCD_Backlight_PORT, &g);
       g.Pin   = LCD_DC_PIN;
       HAL_GPIO_Init(LCD_DC_PORT, &g);
       g.Pin       = GPIO_PIN_8|GPIO_PIN_13|GPIO_PIN_14;
       g.Mode      = GPIO_MODE_AF_PP;
       g.Pull      = GPIO_NOPULL;
       g.Speed     = GPIO_SPEED_FREQ_VERY_HIGH;
       g.Alternate = GPIO_AF5_SPI6;
       HAL_GPIO_Init(GPIOG, &g);
   }           // 初始化SPI和控制引脚
	// HAL_Delay(10);					// 屏幕可能刚复位，上电复位后需要等待至少5ms才能发送指令
	LCD_DWT_Delay_ms(10);

 	LCD_WriteCommand(0x36);			// 显存扫描方向 指令，用来设置写显存的方向
	Usart_SendString(&huart1, "1", 1);
	LCD_WriteData_8bit(0x00);		// 设置成 从上到下、从左到右，RGB像素格式
	Usart_SendString(&huart1, "2", 1);
	LCD_WriteCommand(0x3A);			// 接口像素格式 指令，可以设置使用 12位、16位和18位色
	Usart_SendString(&huart1, "3", 1);
	LCD_WriteData_8bit(0x05);		// 此处设置成 16位 像素格式


	// 以下大多是电压配置指令，直接使用厂家给定值
 	LCD_WriteCommand(0xB2);			
	LCD_WriteData_8bit(0x0C);
	LCD_WriteData_8bit(0x0C); 
	LCD_WriteData_8bit(0x00); 
	LCD_WriteData_8bit(0x33); 
	LCD_WriteData_8bit(0x33); 			

	LCD_WriteCommand(0xB7);		   // 栅极电压控制指令
	LCD_WriteData_8bit(0x35);     // VGH = 13.26V，VGL = -10.43V

	LCD_WriteCommand(0xBB);		  // 共模电压控制指令
	LCD_WriteData_8bit(0x19);     // VCOM = 1.35V

	LCD_WriteCommand(0xC0);
	LCD_WriteData_8bit(0x2C);

	LCD_WriteCommand(0xC2);			// VDV 和 VRH 电源控制
	LCD_WriteData_8bit(0x01);		// VDV 和 VRH 的基本设置

	LCD_WriteCommand(0xC3);			// VRH电压 设置指令
	LCD_WriteData_8bit(0x12);		// VRH电压 = 4.6+( vcom+vcom offset+vdv)
				
	LCD_WriteCommand(0xC4);			// VDV电压 设置指令
	LCD_WriteData_8bit(0x20);		// VDV电压 = 0v

	LCD_WriteCommand(0xC6);			// 普通模式下帧率控制指令
	LCD_WriteData_8bit(0x0F);   	// 设置屏幕默认刷新帧率为60帧

	LCD_WriteCommand(0xD0);			// 电源控制指令
	LCD_WriteData_8bit(0xA4);		// 特定数据，固定写入0xA4
	LCD_WriteData_8bit(0xA1);		// AVDD = 6.8V ，AVDD = -4.8V ，VDS = 2.3V

	LCD_WriteCommand(0xE0);			// 正电压伽马值设定
	LCD_WriteData_8bit(0xD0);
	LCD_WriteData_8bit(0x04);
	LCD_WriteData_8bit(0x0D);
	LCD_WriteData_8bit(0x11);
	LCD_WriteData_8bit(0x13);
	LCD_WriteData_8bit(0x2B);
	LCD_WriteData_8bit(0x3F);
	LCD_WriteData_8bit(0x54);
	LCD_WriteData_8bit(0x4C);
	LCD_WriteData_8bit(0x18);
	LCD_WriteData_8bit(0x0D);
	LCD_WriteData_8bit(0x0B);
	LCD_WriteData_8bit(0x1F);
	LCD_WriteData_8bit(0x23);

	LCD_WriteCommand(0xE1);			// 负电压伽马值设定
	LCD_WriteData_8bit(0xD0);
	LCD_WriteData_8bit(0x04);
	LCD_WriteData_8bit(0x0C);
	LCD_WriteData_8bit(0x11);
	LCD_WriteData_8bit(0x13);
	LCD_WriteData_8bit(0x2C);
	LCD_WriteData_8bit(0x3F);
	LCD_WriteData_8bit(0x44);
	LCD_WriteData_8bit(0x51);
	LCD_WriteData_8bit(0x2F);
	LCD_WriteData_8bit(0x1F);
	LCD_WriteData_8bit(0x1F);
	LCD_WriteData_8bit(0x20);
	LCD_WriteData_8bit(0x23);

	LCD_WriteCommand(0x21);       // 打开反色，因为屏幕是常黑型，所以需要反转

	// 退出休眠指令，LCD在上电、复位时会自动进入休眠模式 ，因此点亮屏幕之前需要退出休眠
	LCD_WriteCommand(0x11);       // 退出休眠 指令
	//HAL_Delay(120);
	LCD_DWT_Delay_ms(120);        // 需要等待120ms，等电源电压、时钟电路稳定后
	Usart_SendString(&huart1, "4", 1);
	// 开显示指令，LCD在上电、复位时会自动关闭显示
	LCD_WriteCommand(0x29);       // 开显示
	
	// 接下来设置一些驱动默认参数
	LCD_SetDirection(Direction_V);		// 设置显示方向
	LCD_SetBackColor(LCD_BLACK);    	// 设置背景色
 	LCD_SetColor(LCD_WHITE);        	// 设置前景色
	LCD_Clear();                    	// 清屏
	LCD_SetAsciiFont(&ASCII_Font24);	// 设置默认字体
	LCD_ShowNumMode(Fill_Zero);			// 设置数字显示模式，空位补空格或补0

	// 全部配置完成之后，打开背光
   LCD_Backlight_ON;  // 背光控制引脚输出高电平
}

void LCD_Clear(void)
{
   LCD_SetAddress(0,0,LCD.Width-1,LCD.Height-1);	// 设置全屏区域

	LCD_DC_Data;     // 拉高指令选择 引脚（推挽输出高电平），代表接下来发送 数据

// 修改为16位数据宽度，写入数据更高效，减少传输次数
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);

   LCD_SPI_Transmit(&LCD_SPI, LCD.BackColor, LCD.Width * LCD.Height) ;   // 填充背景色

// 改回8位数据宽度，因为指令和参数数据都是按8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);
}

void LCD_ClearRect(uint16_t x, uint16_t y, uint16_t width, uint16_t height)
{
   LCD_SetAddress( x, y, x+width-1, y+height-1);	// 设置矩形区域

	LCD_DC_Data;     // 拉高指令选择 引脚（推挽输出高电平），代表接下来发送 数据

// 修改为16位数据宽度，写入数据更高效，减少传输次数
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);

   LCD_SPI_Transmit(&LCD_SPI, LCD.BackColor, width*height) ;  // 填充背景色

// 改回8位数据宽度，因为指令和参数数据都是按8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);

}

void LCD_FillRect(uint16_t x, uint16_t y, uint16_t width, uint16_t height)
{
   LCD_SetAddress( x, y, x+width-1, y+height-1);	// 设置矩形区域

	LCD_DC_Data;     // 拉高指令选择 引脚（推挽输出高电平），代表接下来发送 数据

// 修改为16位数据宽度，写入数据更高效，减少传输次数
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);

   LCD_SPI_Transmit(&LCD_SPI, LCD.Color, width*height) ;

// 改回8位数据宽度，因为指令和参数数据都是按8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);
}
